y.output
State 3 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce
State 8 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 32 conflicts: 2 shift/reduce
State 39 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 53 conflicts: 2 shift/reduce
State 71 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce


Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | commands command

    3 command: search1
    4        | search2
    5        | search3
    6        | search4

    7 search3: CHAR WORD
    8        | CHAR WORD LB WORD
    9        | CHAR WORD LB WORD SIMICOL search4
   10        | NEW WORD
   11        | NEW CHAR
   12        | NEW
   13        | CHAR
   14        | CHAR WORD LB RB
   15        | WORD LB RB
   16        | WORD LB PLUS

   17 search4: WORD LB WORD

   18 search1: STRCPY LBRAK WORD SIMICOL
   19        | STRCPY LBRAK WORD WHITE SIMICOL
   20        | STRCPY LBRAK WORD RBRAK SIMICOL
   21        | STRCPY LBRAK WORD WHITE RBRAK SIMICOL
   22        | STRCPY LBRAK WORD PLUS WORD SIMICOL
   23        | STRCPY
   24        | STRCPY LBRAK
   25        | STRCAT LBRAK WORD SIMICOL
   26        | STRCAT LBRAK WORD WHITE SIMICOL
   27        | STRCAT LBRAK WORD RBRAK SIMICOL
   28        | STRCAT LBRAK WORD WHITE RBRAK SIMICOL
   29        | STRCAT LBRAK WORD PLUS WORD SIMICOL
   30        | STRCAT
   31        | STRCAT LBRAK
   32        | MEMCCPY LBRAK WORD SIMICOL
   33        | MEMCCPY LBRAK WORD WHITE SIMICOL
   34        | MEMMOVE LBRAK WORD SIMICOL
   35        | MEMMOVE LBRAK WORD WHITE SIMICOL
   36        | MEMSET LBRAK WORD SIMICOL
   37        | MEMSET LBRAK WORD WHITE SIMICOL
   38        | BCOPY LBRAK WORD SIMICOL
   39        | BCOPY LBRAK WORD PLUS WORD SIMICOL
   40        | BCOPY LBRAK WORD WHITE SIMICOL
   41        | BCOPY
   42        | BCOPY LBRAK
   43        | BCOPY LBRAK ANY
   44        | STRECPY LBRAK WORD SIMICOL
   45        | STREADD LBRAK WORD SIMICOL
   46        | STRNCPY LBRAK WORD SIMICOL
   47        | MEMCPY LBRAK WORD SIMICOL
   48        | MEMCPY LBRAK WORD WHITE SIMICOL
   49        | MEMCPY LBRAK WORD PLUS WORD SIMICOL
   50        | WCSCPY LBRAK WORD SIMICOL
   51        | WCSCPY LBRAK WORD WHITE SIMICOL
   52        | WCSCAT LBRAK WORD SIMICOL
   53        | WCSCAT LBRAK WORD WHITE SIMICOL
   54        | SPRINTF LBRAK WORD SIMICOL
   55        | SPRINTF
   56        | GETS LBRAK WORD RBRAK
   57        | VSPRINTF LBRAK WORD SIMICOL
   58        | SCANF LBRAK TCOM PERCENT WORD
   59        | SCANF LBRAK TCOM PERCENT NUMBER
   60        | GETOPT LBRAK
   61        | GETPASS LBRAK
   62        | STRTRNS LBRAK
   63        | STRPCPY LBRAK
   64        | GETWD LBRAK
   65        | REALPATH LBRAK
   66        | MEMCHR LBRAK

   67 search2: WORD
   68        | WHITE
   69        | TAB
   70        | EOL
   71        | LBRAK
   72        | RBRAK
   73        | SIMICOL
   74        | PERCENT
   75        | PLUS
   76        | ANY
   77        | TCOM
   78        | MUL
   79        | COM
   80        | LB
   81        | RB


Terminals, with rules where they appear

$end (0) 0
error (256)
STRCPY (258) 18 19 20 21 22 23 24
STRCAT (259) 25 26 27 28 29 30 31
GETS (260) 56
SPRINTF (261) 54 55
VSPRINTF (262) 57
BCOPY (263) 38 39 40 41 42 43
SCANF (264) 58 59
TAB (265) 69
EOL (266) 70
SIMICOL (267) 9 18 19 20 21 22 25 26 27 28 29 32 33 34 35 36 37 38
    39 40 44 45 46 47 48 49 50 51 52 53 54 57 73
COM (268) 79
PERCENT (269) 58 59 74
GETOPT (270) 60
GETPASS (271) 61
STRECPY (272) 44
STREADD (273) 45
STRNCPY (274) 46
STRTRNS (275) 62
STRPCPY (276) 63
WCSCPY (277) 50 51
WCSCAT (278) 52 53
GETWD (279) 64
REALPATH (280) 65
MEMCPY (281) 47 48 49
MEMCHR (282) 66
MEMCCPY (283) 32 33
MEMMOVE (284) 34 35
MEMSET (285) 36 37
CHAR (286) 7 8 9 11 13 14
NEW (287) 10 11 12
LBRAK (288) 18 19 20 21 22 24 25 26 27 28 29 31 32 33 34 35 36 37 38
    39 40 42 43 44 45 46 47 48 49 50 51 52 53 54 56 57 58 59 60 61
    62 63 64 65 66 71
RBRAK (289) 20 21 27 28 56 72
ANY (290) 43 76
PLUS (291) 16 22 29 39 49 75
NUMBER (292) 59
MUL (293) 78
TCOM (294) 58 59 77
WORD (295) 7 8 9 10 14 15 16 17 18 19 20 21 22 25 26 27 28 29 32 33
    34 35 36 37 38 39 40 44 45 46 47 48 49 50 51 52 53 54 56 57 58
    67
LB (296) 8 9 14 15 16 17 80
RB (297) 14 15 81
WHITE (298) 19 21 26 28 33 35 37 40 48 51 53 68


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
commands (45)
    on left: 1 2, on right: 0 2
command (46)
    on left: 3 4 5 6, on right: 2
search3 (47)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 5
search4 (48)
    on left: 17, on right: 6 9
search1 (49)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66, on right: 3
search2 (50)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81, on right:
    4


state 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


state 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end      shift, and go to state 2
    STRCPY    shift, and go to state 3
    STRCAT    shift, and go to state 4
    GETS      shift, and go to state 5
    SPRINTF   shift, and go to state 6
    VSPRINTF  shift, and go to state 7
    BCOPY     shift, and go to state 8
    SCANF     shift, and go to state 9
    TAB       shift, and go to state 10
    EOL       shift, and go to state 11
    SIMICOL   shift, and go to state 12
    COM       shift, and go to state 13
    PERCENT   shift, and go to state 14
    GETOPT    shift, and go to state 15
    GETPASS   shift, and go to state 16
    STRECPY   shift, and go to state 17
    STREADD   shift, and go to state 18
    STRNCPY   shift, and go to state 19
    STRTRNS   shift, and go to state 20
    STRPCPY   shift, and go to state 21
    WCSCPY    shift, and go to state 22
    WCSCAT    shift, and go to state 23
    GETWD     shift, and go to state 24
    REALPATH  shift, and go to state 25
    MEMCPY    shift, and go to state 26
    MEMCHR    shift, and go to state 27
    MEMCCPY   shift, and go to state 28
    MEMMOVE   shift, and go to state 29
    MEMSET    shift, and go to state 30
    CHAR      shift, and go to state 31
    NEW       shift, and go to state 32
    LBRAK     shift, and go to state 33
    RBRAK     shift, and go to state 34
    ANY       shift, and go to state 35
    PLUS      shift, and go to state 36
    MUL       shift, and go to state 37
    TCOM      shift, and go to state 38
    WORD      shift, and go to state 39
    LB        shift, and go to state 40
    RB        shift, and go to state 41
    WHITE     shift, and go to state 42

    command  go to state 43
    search3  go to state 44
    search4  go to state 45
    search1  go to state 46
    search2  go to state 47


state 2

    0 $accept: commands $end .

    $default  accept


state 3

   18 search1: STRCPY . LBRAK WORD SIMICOL
   19        | STRCPY . LBRAK WORD WHITE SIMICOL
   20        | STRCPY . LBRAK WORD RBRAK SIMICOL
   21        | STRCPY . LBRAK WORD WHITE RBRAK SIMICOL
   22        | STRCPY . LBRAK WORD PLUS WORD SIMICOL
   23        | STRCPY .
   24        | STRCPY . LBRAK

    LBRAK  shift, and go to state 48

    LBRAK     [reduce using rule 23 (search1)]
    $default  reduce using rule 23 (search1)


state 4

   25 search1: STRCAT . LBRAK WORD SIMICOL
   26        | STRCAT . LBRAK WORD WHITE SIMICOL
   27        | STRCAT . LBRAK WORD RBRAK SIMICOL
   28        | STRCAT . LBRAK WORD WHITE RBRAK SIMICOL
   29        | STRCAT . LBRAK WORD PLUS WORD SIMICOL
   30        | STRCAT .
   31        | STRCAT . LBRAK

    LBRAK  shift, and go to state 49

    LBRAK     [reduce using rule 30 (search1)]
    $default  reduce using rule 30 (search1)


state 5

   56 search1: GETS . LBRAK WORD RBRAK

    LBRAK  shift, and go to state 50


state 6

   54 search1: SPRINTF . LBRAK WORD SIMICOL
   55        | SPRINTF .

    LBRAK  shift, and go to state 51

    LBRAK     [reduce using rule 55 (search1)]
    $default  reduce using rule 55 (search1)


state 7

   57 search1: VSPRINTF . LBRAK WORD SIMICOL

    LBRAK  shift, and go to state 52


state 8

   38 search1: BCOPY . LBRAK WORD SIMICOL
   39        | BCOPY . LBRAK WORD PLUS WORD SIMICOL
   40        | BCOPY . LBRAK WORD WHITE SIMICOL
   41        | BCOPY .
   42        | BCOPY . LBRAK
   43        | BCOPY . LBRAK ANY

    LBRAK  shift, and go to state 53

    LBRAK     [reduce using rule 41 (search1)]
    $default  reduce using rule 41 (search1)


state 9

   58 search1: SCANF . LBRAK TCOM PERCENT WORD
   59        | SCANF . LBRAK TCOM PERCENT NUMBER

    LBRAK  shift, and go to state 54


state 10

   69 search2: TAB .

    $default  reduce using rule 69 (search2)


state 11

   70 search2: EOL .

    $default  reduce using rule 70 (search2)


state 12

   73 search2: SIMICOL .

    $default  reduce using rule 73 (search2)


state 13

   79 search2: COM .

    $default  reduce using rule 79 (search2)


state 14

   74 search2: PERCENT .

    $default  reduce using rule 74 (search2)


state 15

   60 search1: GETOPT . LBRAK

    LBRAK  shift, and go to state 55


state 16

   61 search1: GETPASS . LBRAK

    LBRAK  shift, and go to state 56


state 17

   44 search1: STRECPY . LBRAK WORD SIMICOL

    LBRAK  shift, and go to state 57


state 18

   45 search1: STREADD . LBRAK WORD SIMICOL

    LBRAK  shift, and go to state 58


state 19

   46 search1: STRNCPY . LBRAK WORD SIMICOL

    LBRAK  shift, and go to state 59


state 20

   62 search1: STRTRNS . LBRAK

    LBRAK  shift, and go to state 60


state 21

   63 search1: STRPCPY . LBRAK

    LBRAK  shift, and go to state 61


state 22

   50 search1: WCSCPY . LBRAK WORD SIMICOL
   51        | WCSCPY . LBRAK WORD WHITE SIMICOL

    LBRAK  shift, and go to state 62


state 23

   52 search1: WCSCAT . LBRAK WORD SIMICOL
   53        | WCSCAT . LBRAK WORD WHITE SIMICOL

    LBRAK  shift, and go to state 63


state 24

   64 search1: GETWD . LBRAK

    LBRAK  shift, and go to state 64


state 25

   65 search1: REALPATH . LBRAK

    LBRAK  shift, and go to state 65


state 26

   47 search1: MEMCPY . LBRAK WORD SIMICOL
   48        | MEMCPY . LBRAK WORD WHITE SIMICOL
   49        | MEMCPY . LBRAK WORD PLUS WORD SIMICOL

    LBRAK  shift, and go to state 66


state 27

   66 search1: MEMCHR . LBRAK

    LBRAK  shift, and go to state 67


state 28

   32 search1: MEMCCPY . LBRAK WORD SIMICOL
   33        | MEMCCPY . LBRAK WORD WHITE SIMICOL

    LBRAK  shift, and go to state 68


state 29

   34 search1: MEMMOVE . LBRAK WORD SIMICOL
   35        | MEMMOVE . LBRAK WORD WHITE SIMICOL

    LBRAK  shift, and go to state 69


state 30

   36 search1: MEMSET . LBRAK WORD SIMICOL
   37        | MEMSET . LBRAK WORD WHITE SIMICOL

    LBRAK  shift, and go to state 70


state 31

    7 search3: CHAR . WORD
    8        | CHAR . WORD LB WORD
    9        | CHAR . WORD LB WORD SIMICOL search4
   13        | CHAR .
   14        | CHAR . WORD LB RB

    WORD  shift, and go to state 71

    WORD      [reduce using rule 13 (search3)]
    $default  reduce using rule 13 (search3)


state 32

   10 search3: NEW . WORD
   11        | NEW . CHAR
   12        | NEW .

    CHAR  shift, and go to state 72
    WORD  shift, and go to state 73

    CHAR      [reduce using rule 12 (search3)]
    WORD      [reduce using rule 12 (search3)]
    $default  reduce using rule 12 (search3)


state 33

   71 search2: LBRAK .

    $default  reduce using rule 71 (search2)


state 34

   72 search2: RBRAK .

    $default  reduce using rule 72 (search2)


state 35

   76 search2: ANY .

    $default  reduce using rule 76 (search2)


state 36

   75 search2: PLUS .

    $default  reduce using rule 75 (search2)


state 37

   78 search2: MUL .

    $default  reduce using rule 78 (search2)


state 38

   77 search2: TCOM .

    $default  reduce using rule 77 (search2)


state 39

   15 search3: WORD . LB RB
   16        | WORD . LB PLUS
   17 search4: WORD . LB WORD
   67 search2: WORD .

    LB  shift, and go to state 74

    LB        [reduce using rule 67 (search2)]
    $default  reduce using rule 67 (search2)


state 40

   80 search2: LB .

    $default  reduce using rule 80 (search2)


state 41

   81 search2: RB .

    $default  reduce using rule 81 (search2)


state 42

   68 search2: WHITE .

    $default  reduce using rule 68 (search2)


state 43

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


state 44

    5 command: search3 .

    $default  reduce using rule 5 (command)


state 45

    6 command: search4 .

    $default  reduce using rule 6 (command)


state 46

    3 command: search1 .

    $default  reduce using rule 3 (command)


state 47

    4 command: search2 .

    $default  reduce using rule 4 (command)


state 48

   18 search1: STRCPY LBRAK . WORD SIMICOL
   19        | STRCPY LBRAK . WORD WHITE SIMICOL
   20        | STRCPY LBRAK . WORD RBRAK SIMICOL
   21        | STRCPY LBRAK . WORD WHITE RBRAK SIMICOL
   22        | STRCPY LBRAK . WORD PLUS WORD SIMICOL
   24        | STRCPY LBRAK .

    WORD  shift, and go to state 75

    WORD      [reduce using rule 24 (search1)]
    $default  reduce using rule 24 (search1)


state 49

   25 search1: STRCAT LBRAK . WORD SIMICOL
   26        | STRCAT LBRAK . WORD WHITE SIMICOL
   27        | STRCAT LBRAK . WORD RBRAK SIMICOL
   28        | STRCAT LBRAK . WORD WHITE RBRAK SIMICOL
   29        | STRCAT LBRAK . WORD PLUS WORD SIMICOL
   31        | STRCAT LBRAK .

    WORD  shift, and go to state 76

    WORD      [reduce using rule 31 (search1)]
    $default  reduce using rule 31 (search1)


state 50

   56 search1: GETS LBRAK . WORD RBRAK

    WORD  shift, and go to state 77


state 51

   54 search1: SPRINTF LBRAK . WORD SIMICOL

    WORD  shift, and go to state 78


state 52

   57 search1: VSPRINTF LBRAK . WORD SIMICOL

    WORD  shift, and go to state 79


state 53

   38 search1: BCOPY LBRAK . WORD SIMICOL
   39        | BCOPY LBRAK . WORD PLUS WORD SIMICOL
   40        | BCOPY LBRAK . WORD WHITE SIMICOL
   42        | BCOPY LBRAK .
   43        | BCOPY LBRAK . ANY

    ANY   shift, and go to state 80
    WORD  shift, and go to state 81

    ANY       [reduce using rule 42 (search1)]
    WORD      [reduce using rule 42 (search1)]
    $default  reduce using rule 42 (search1)


state 54

   58 search1: SCANF LBRAK . TCOM PERCENT WORD
   59        | SCANF LBRAK . TCOM PERCENT NUMBER

    TCOM  shift, and go to state 82


state 55

   60 search1: GETOPT LBRAK .

    $default  reduce using rule 60 (search1)


state 56

   61 search1: GETPASS LBRAK .

    $default  reduce using rule 61 (search1)


state 57

   44 search1: STRECPY LBRAK . WORD SIMICOL

    WORD  shift, and go to state 83


state 58

   45 search1: STREADD LBRAK . WORD SIMICOL

    WORD  shift, and go to state 84


state 59

   46 search1: STRNCPY LBRAK . WORD SIMICOL

    WORD  shift, and go to state 85


state 60

   62 search1: STRTRNS LBRAK .

    $default  reduce using rule 62 (search1)


state 61

   63 search1: STRPCPY LBRAK .

    $default  reduce using rule 63 (search1)


state 62

   50 search1: WCSCPY LBRAK . WORD SIMICOL
   51        | WCSCPY LBRAK . WORD WHITE SIMICOL

    WORD  shift, and go to state 86


state 63

   52 search1: WCSCAT LBRAK . WORD SIMICOL
   53        | WCSCAT LBRAK . WORD WHITE SIMICOL

    WORD  shift, and go to state 87


state 64

   64 search1: GETWD LBRAK .

    $default  reduce using rule 64 (search1)


state 65

   65 search1: REALPATH LBRAK .

    $default  reduce using rule 65 (search1)


state 66

   47 search1: MEMCPY LBRAK . WORD SIMICOL
   48        | MEMCPY LBRAK . WORD WHITE SIMICOL
   49        | MEMCPY LBRAK . WORD PLUS WORD SIMICOL

    WORD  shift, and go to state 88


state 67

   66 search1: MEMCHR LBRAK .

    $default  reduce using rule 66 (search1)


state 68

   32 search1: MEMCCPY LBRAK . WORD SIMICOL
   33        | MEMCCPY LBRAK . WORD WHITE SIMICOL

    WORD  shift, and go to state 89


state 69

   34 search1: MEMMOVE LBRAK . WORD SIMICOL
   35        | MEMMOVE LBRAK . WORD WHITE SIMICOL

    WORD  shift, and go to state 90


state 70

   36 search1: MEMSET LBRAK . WORD SIMICOL
   37        | MEMSET LBRAK . WORD WHITE SIMICOL

    WORD  shift, and go to state 91


state 71

    7 search3: CHAR WORD .
    8        | CHAR WORD . LB WORD
    9        | CHAR WORD . LB WORD SIMICOL search4
   14        | CHAR WORD . LB RB

    LB  shift, and go to state 92

    LB        [reduce using rule 7 (search3)]
    $default  reduce using rule 7 (search3)


state 72

   11 search3: NEW CHAR .

    $default  reduce using rule 11 (search3)


state 73

   10 search3: NEW WORD .

    $default  reduce using rule 10 (search3)


state 74

   15 search3: WORD LB . RB
   16        | WORD LB . PLUS
   17 search4: WORD LB . WORD

    PLUS  shift, and go to state 93
    WORD  shift, and go to state 94
    RB    shift, and go to state 95


state 75

   18 search1: STRCPY LBRAK WORD . SIMICOL
   19        | STRCPY LBRAK WORD . WHITE SIMICOL
   20        | STRCPY LBRAK WORD . RBRAK SIMICOL
   21        | STRCPY LBRAK WORD . WHITE RBRAK SIMICOL
   22        | STRCPY LBRAK WORD . PLUS WORD SIMICOL

    SIMICOL  shift, and go to state 96
    RBRAK    shift, and go to state 97
    PLUS     shift, and go to state 98
    WHITE    shift, and go to state 99


state 76

   25 search1: STRCAT LBRAK WORD . SIMICOL
   26        | STRCAT LBRAK WORD . WHITE SIMICOL
   27        | STRCAT LBRAK WORD . RBRAK SIMICOL
   28        | STRCAT LBRAK WORD . WHITE RBRAK SIMICOL
   29        | STRCAT LBRAK WORD . PLUS WORD SIMICOL

    SIMICOL  shift, and go to state 100
    RBRAK    shift, and go to state 101
    PLUS     shift, and go to state 102
    WHITE    shift, and go to state 103


state 77

   56 search1: GETS LBRAK WORD . RBRAK

    RBRAK  shift, and go to state 104


state 78

   54 search1: SPRINTF LBRAK WORD . SIMICOL

    SIMICOL  shift, and go to state 105


state 79

   57 search1: VSPRINTF LBRAK WORD . SIMICOL

    SIMICOL  shift, and go to state 106


state 80

   43 search1: BCOPY LBRAK ANY .

    $default  reduce using rule 43 (search1)


state 81

   38 search1: BCOPY LBRAK WORD . SIMICOL
   39        | BCOPY LBRAK WORD . PLUS WORD SIMICOL
   40        | BCOPY LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 107
    PLUS     shift, and go to state 108
    WHITE    shift, and go to state 109


state 82

   58 search1: SCANF LBRAK TCOM . PERCENT WORD
   59        | SCANF LBRAK TCOM . PERCENT NUMBER

    PERCENT  shift, and go to state 110


state 83

   44 search1: STRECPY LBRAK WORD . SIMICOL

    SIMICOL  shift, and go to state 111


state 84

   45 search1: STREADD LBRAK WORD . SIMICOL

    SIMICOL  shift, and go to state 112


state 85

   46 search1: STRNCPY LBRAK WORD . SIMICOL

    SIMICOL  shift, and go to state 113


state 86

   50 search1: WCSCPY LBRAK WORD . SIMICOL
   51        | WCSCPY LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 114
    WHITE    shift, and go to state 115


state 87

   52 search1: WCSCAT LBRAK WORD . SIMICOL
   53        | WCSCAT LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 116
    WHITE    shift, and go to state 117


state 88

   47 search1: MEMCPY LBRAK WORD . SIMICOL
   48        | MEMCPY LBRAK WORD . WHITE SIMICOL
   49        | MEMCPY LBRAK WORD . PLUS WORD SIMICOL

    SIMICOL  shift, and go to state 118
    PLUS     shift, and go to state 119
    WHITE    shift, and go to state 120


state 89

   32 search1: MEMCCPY LBRAK WORD . SIMICOL
   33        | MEMCCPY LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 121
    WHITE    shift, and go to state 122


state 90

   34 search1: MEMMOVE LBRAK WORD . SIMICOL
   35        | MEMMOVE LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 123
    WHITE    shift, and go to state 124


state 91

   36 search1: MEMSET LBRAK WORD . SIMICOL
   37        | MEMSET LBRAK WORD . WHITE SIMICOL

    SIMICOL  shift, and go to state 125
    WHITE    shift, and go to state 126


state 92

    8 search3: CHAR WORD LB . WORD
    9        | CHAR WORD LB . WORD SIMICOL search4
   14        | CHAR WORD LB . RB

    WORD  shift, and go to state 127
    RB    shift, and go to state 128


state 93

   16 search3: WORD LB PLUS .

    $default  reduce using rule 16 (search3)


state 94

   17 search4: WORD LB WORD .

    $default  reduce using rule 17 (search4)


state 95

   15 search3: WORD LB RB .

    $default  reduce using rule 15 (search3)


state 96

   18 search1: STRCPY LBRAK WORD SIMICOL .

    $default  reduce using rule 18 (search1)


state 97

   20 search1: STRCPY LBRAK WORD RBRAK . SIMICOL

    SIMICOL  shift, and go to state 129


state 98

   22 search1: STRCPY LBRAK WORD PLUS . WORD SIMICOL

    WORD  shift, and go to state 130


state 99

   19 search1: STRCPY LBRAK WORD WHITE . SIMICOL
   21        | STRCPY LBRAK WORD WHITE . RBRAK SIMICOL

    SIMICOL  shift, and go to state 131
    RBRAK    shift, and go to state 132


state 100

   25 search1: STRCAT LBRAK WORD SIMICOL .

    $default  reduce using rule 25 (search1)


state 101

   27 search1: STRCAT LBRAK WORD RBRAK . SIMICOL

    SIMICOL  shift, and go to state 133


state 102

   29 search1: STRCAT LBRAK WORD PLUS . WORD SIMICOL

    WORD  shift, and go to state 134


state 103

   26 search1: STRCAT LBRAK WORD WHITE . SIMICOL
   28        | STRCAT LBRAK WORD WHITE . RBRAK SIMICOL

    SIMICOL  shift, and go to state 135
    RBRAK    shift, and go to state 136


state 104

   56 search1: GETS LBRAK WORD RBRAK .

    $default  reduce using rule 56 (search1)


state 105

   54 search1: SPRINTF LBRAK WORD SIMICOL .

    $default  reduce using rule 54 (search1)


state 106

   57 search1: VSPRINTF LBRAK WORD SIMICOL .

    $default  reduce using rule 57 (search1)


state 107

   38 search1: BCOPY LBRAK WORD SIMICOL .

    $default  reduce using rule 38 (search1)


state 108

   39 search1: BCOPY LBRAK WORD PLUS . WORD SIMICOL

    WORD  shift, and go to state 137


state 109

   40 search1: BCOPY LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 138


state 110

   58 search1: SCANF LBRAK TCOM PERCENT . WORD
   59        | SCANF LBRAK TCOM PERCENT . NUMBER

    NUMBER  shift, and go to state 139
    WORD    shift, and go to state 140


state 111

   44 search1: STRECPY LBRAK WORD SIMICOL .

    $default  reduce using rule 44 (search1)


state 112

   45 search1: STREADD LBRAK WORD SIMICOL .

    $default  reduce using rule 45 (search1)


state 113

   46 search1: STRNCPY LBRAK WORD SIMICOL .

    $default  reduce using rule 46 (search1)


state 114

   50 search1: WCSCPY LBRAK WORD SIMICOL .

    $default  reduce using rule 50 (search1)


state 115

   51 search1: WCSCPY LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 141


state 116

   52 search1: WCSCAT LBRAK WORD SIMICOL .

    $default  reduce using rule 52 (search1)


state 117

   53 search1: WCSCAT LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 142


state 118

   47 search1: MEMCPY LBRAK WORD SIMICOL .

    $default  reduce using rule 47 (search1)


state 119

   49 search1: MEMCPY LBRAK WORD PLUS . WORD SIMICOL

    WORD  shift, and go to state 143


state 120

   48 search1: MEMCPY LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 144


state 121

   32 search1: MEMCCPY LBRAK WORD SIMICOL .

    $default  reduce using rule 32 (search1)


state 122

   33 search1: MEMCCPY LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 145


state 123

   34 search1: MEMMOVE LBRAK WORD SIMICOL .

    $default  reduce using rule 34 (search1)


state 124

   35 search1: MEMMOVE LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 146


state 125

   36 search1: MEMSET LBRAK WORD SIMICOL .

    $default  reduce using rule 36 (search1)


state 126

   37 search1: MEMSET LBRAK WORD WHITE . SIMICOL

    SIMICOL  shift, and go to state 147


state 127

    8 search3: CHAR WORD LB WORD .
    9        | CHAR WORD LB WORD . SIMICOL search4

    SIMICOL  shift, and go to state 148

    SIMICOL   [reduce using rule 8 (search3)]
    $default  reduce using rule 8 (search3)


state 128

   14 search3: CHAR WORD LB RB .

    $default  reduce using rule 14 (search3)


state 129

   20 search1: STRCPY LBRAK WORD RBRAK SIMICOL .

    $default  reduce using rule 20 (search1)


state 130

   22 search1: STRCPY LBRAK WORD PLUS WORD . SIMICOL

    SIMICOL  shift, and go to state 149


state 131

   19 search1: STRCPY LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 19 (search1)


state 132

   21 search1: STRCPY LBRAK WORD WHITE RBRAK . SIMICOL

    SIMICOL  shift, and go to state 150


state 133

   27 search1: STRCAT LBRAK WORD RBRAK SIMICOL .

    $default  reduce using rule 27 (search1)


state 134

   29 search1: STRCAT LBRAK WORD PLUS WORD . SIMICOL

    SIMICOL  shift, and go to state 151


state 135

   26 search1: STRCAT LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 26 (search1)


state 136

   28 search1: STRCAT LBRAK WORD WHITE RBRAK . SIMICOL

    SIMICOL  shift, and go to state 152


state 137

   39 search1: BCOPY LBRAK WORD PLUS WORD . SIMICOL

    SIMICOL  shift, and go to state 153


state 138

   40 search1: BCOPY LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 40 (search1)


state 139

   59 search1: SCANF LBRAK TCOM PERCENT NUMBER .

    $default  reduce using rule 59 (search1)


state 140

   58 search1: SCANF LBRAK TCOM PERCENT WORD .

    $default  reduce using rule 58 (search1)


state 141

   51 search1: WCSCPY LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 51 (search1)


state 142

   53 search1: WCSCAT LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 53 (search1)


state 143

   49 search1: MEMCPY LBRAK WORD PLUS WORD . SIMICOL

    SIMICOL  shift, and go to state 154


state 144

   48 search1: MEMCPY LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 48 (search1)


state 145

   33 search1: MEMCCPY LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 33 (search1)


state 146

   35 search1: MEMMOVE LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 35 (search1)


state 147

   37 search1: MEMSET LBRAK WORD WHITE SIMICOL .

    $default  reduce using rule 37 (search1)


state 148

    9 search3: CHAR WORD LB WORD SIMICOL . search4

    WORD  shift, and go to state 155

    search4  go to state 156


state 149

   22 search1: STRCPY LBRAK WORD PLUS WORD SIMICOL .

    $default  reduce using rule 22 (search1)


state 150

   21 search1: STRCPY LBRAK WORD WHITE RBRAK SIMICOL .

    $default  reduce using rule 21 (search1)


state 151

   29 search1: STRCAT LBRAK WORD PLUS WORD SIMICOL .

    $default  reduce using rule 29 (search1)


state 152

   28 search1: STRCAT LBRAK WORD WHITE RBRAK SIMICOL .

    $default  reduce using rule 28 (search1)


state 153

   39 search1: BCOPY LBRAK WORD PLUS WORD SIMICOL .

    $default  reduce using rule 39 (search1)


state 154

   49 search1: MEMCPY LBRAK WORD PLUS WORD SIMICOL .

    $default  reduce using rule 49 (search1)


state 155

   17 search4: WORD . LB WORD

    LB  shift, and go to state 157


state 156

    9 search3: CHAR WORD LB WORD SIMICOL search4 .

    $default  reduce using rule 9 (search3)


state 157

   17 search4: WORD LB . WORD

    WORD  shift, and go to state 94
